victoriametrics/vmmw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-mw
  namespace: vm
spec:
  basicAuth:
    secret: vmui-auth-secret
