victoriametrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-ingress
  namespace: vm
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authelia-auth-mw@kubernetescrd
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: victoriametrics.k8s.zrui.dev
      http:
        paths:
          - path: /vmui
            pathType: Prefix
            backend:
              service:
                name: vmsingle-vm-single
                port:
                  number: 8429
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: vmsingle-vm-single
                port:
                  number: 8429

    - host: victorialogs.k8s.zrui.dev
      http:
        paths:
          - path: /select
            pathType: Prefix
            backend:
              service:
                name: vlogs-vm-logs
                port:
                  number: 9428
  tls:
    - secretName: victoriametrics-tls-secret
      hosts:
        - victoriametrics.k8s.zrui.dev
        - victorialogs.k8s.zrui.dev
